<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoanGate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list">List</string>
    <string name="gifts">Gifts</string>
    <string name="search">Search</string>
    <string name="notify">Reminder</string>
    <string name="settings">Settings</string>
    <string name="category_icon_description">Category Icon</string>
    <string name="expires_at">Expires at</string>
    <string name="view_all">View All </string>
    <string name="separator">•</string>
    <string name="message_load_title">Loading</string>
    <string name="message_load_loan_list">Please wait while loading list of available loans&#8230;</string>
    <string name="message_load_category_list">Please wait while loading loan categories&#8230;</string>
    <string name="message_load_loan_detail">Please wait while loading loan detail&#8230;</string>
    <string name="under_construction">Under Construction</string>
    <string name="network_error_title">Error</string>
    <string name="network_error_message">Cannot connect to server.</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
</resources>
