<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CategoryActivity" 
    android:orientation="vertical"
    android:gravity="fill">
    
    <ListView 
        android:id="@+id/lvw_categories"
        android:layout_gravity="top"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="0dp"
        android:layout_margin="0dp">

        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/list" />
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search" />
        <Button
            android:id="@+id/btn_sync"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sync" />
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/notify" />
        <Button
            android:id="@+id/btn_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>
