<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dip" >
        
     <!-- ListRow Left side Thumbnail image -->
     <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="2dp"
        android:padding="2dip" >
        <ImageView
            android:id="@+id/ivwCategoryIcon"
            android:contentDescription="@string/category_icon_description"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>
        
    <TextView
        android:id="@+id/tbxCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_marginLeft="2dp"
        android:layout_alignParentTop="true"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name" />
    
    <TextView
        android:id="@+id/tbxCategoryCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="#A00404"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/search" />

    <TextView 
        android:id="@+id/tbxCategoryModified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textColor="#909090"
        android:textSize="12sp"
        android:text="@string/sync" />
    
    <TextView
        android:id="@+id/tbxCategoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_marginLeft="2dp"
        android:textColor="#909090"
        android:textSize="12sp"
        android:text="@string/category_icon_description" />
</RelativeLayout>
